--- a/css/ids.css
+++ b/css/ids.css
@@ -11,6 +11,16 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+
+@font-face {
+    font-family: "ff-meta-serif-web-pro";
+    src: url("https://use.typekit.net/af/d03d8b/00000000000000003b9b06f1/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff2"), url("https://use.typekit.net/af/d03d8b/00000000000000003b9b06f1/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff"), url("https://use.typekit.net/af/d03d8b/00000000000000003b9b06f1/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("opentype");
+    font-display: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-stretch: normal;
+}
 
 /* natural box model */
 html {
@@ -45,7 +55,7 @@ html {
 
     /* breakpoints */
     --small: 480px;
-    --medium: 768px;
+    --medium: 720px;
     --large: 1024px;
 
     /* nav height */
@@ -92,7 +102,9 @@ html {
 h1,
 h2,
 h3 {
-    font-family: 'Playfair Display', 'Times New Roman', serif;
+    /* font-family: 'Playfair Display', 'Times New Roman', serif; */
+    font-family: 'Source Serif Pro', 'Times New Roman', serif;
+    font-weight: 400;
 }
 
 h4,
@@ -114,12 +126,14 @@ p.caption,
 p.credit,
 span.caption,
 p.copyright {
-    font-family: 'Inter', sans-serif;
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Fira Sans', Helvetica, sans-serif;
     font-weight: 400;
 }
 
 p {
-    font-family: 'PT Serif', sans-serif;
+    /* font-family: 'PT Serif', sans-serif; */
+    font-family: 'ff-meta-serif-web-pro', 'Times New Roman', serif;
 }
 
 .quote {
@@ -691,8 +705,8 @@ nav li a:active {
 */
 footer {
     margin-top: 3.0em;
-    color: rgb(80, 80, 80);
-    background-color: #f5f5f5;
+    color: white;
+    background-color: var(--idsred);
 }
 
 footer .copyright {
@@ -709,29 +723,58 @@ footer p.copyright {
     font-size: 18px;
 }
 
-footer .links {
+/* footer .links {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     margin-bottom: var(--sm);
-}
+} */
 
 .footer-row {
-    padding: var(--lg);
+    /* padding: var(--lg); */
+    max-width: var(--large);
+    margin: 0 auto;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 30px 0;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+}
+
+address p {
+    font-size: 16px;
+    font-style: normal;
+    margin: 0.25em 0 0;
+}
+
+.footer-row h4 {
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-top: 0;
+    font-weight: 600;
+    letter-spacing: .02em;
+}
+
+.footer-col {
+    margin-right: 50px;
+}
+
+.footer-row ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 footer svg {
     height: 32px;
     margin-right: 10px;
+    fill: white;
 }
 
-.logo {
+footer .logo {
     font-size: 24px;
     display: flex;
     cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .logo a {
@@ -740,7 +783,7 @@ footer svg {
 }
 
 footer .logo span {
-    color: var(--darkgray);
+    color: white;
 }
 
 footer a.subscribe {
@@ -754,21 +797,6 @@ footer a.subscribe {
     border-radius: 3px;
 }
 
-footer a.subscribe:link,
-footer a.subscribe:visited {
-    border-bottom: none;
-    box-shadow: 1px 1px 5px rgb(157, 157, 157);
-    transform: scale(1);
-    transition: box-shadow .2s, transform .2s;
-}
-
-footer a.subscribe:hover,
-footer a.subscribe:active {
-    box-shadow: 2px 2px 10px rgb(157, 157, 157);
-    transform: scale(1.02);
-    transition: box-shadow .2s, transform .2s;
-}
-
 footer .socials a {
     border-bottom: none;
     color: #990000;
@@ -776,15 +804,84 @@ footer .socials a {
     margin-left: 10px;
 }
 
+.subscribe-cta {
+    background-color: #DEEDF7;
+    padding: 28px 0;
+}
+
+.subscribe-cta h3 {
+    margin-top: 0;
+    margin-bottom: 0.2em;
+    font-size: 32px;
+}
+
+.subscribe-cta p {
+    margin-bottom: 0;
+    margin-top: 0;
+    font-size: 20px;
+}
+
+.subscribe-cta h3,
+.subscribe-cta p,
+.subscribe-cta a {
+    font-family: 'Fira Sans', Helvetica, sans-serif;
+    color: var(--darkgray);
+}
+
+.subscribe-cta a {
+    color: white;
+    text-transform: uppercase;
+    font-size: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta-content {
+    display: flex;
+    max-width: var(--large);
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cta-content a {
+    /* subscribe button */
+    font-weight: bold;
+    letter-spacing: 0.05em;
+    height: 40px;
+    font-size: 18px;
+    padding: 5px 15px;
+    background-color: #990000;
+    color: #f5f5f5;
+    border-radius: 3px;
+}
+
+.cta-content a:link,
+.cta-content a:visited {
+    border-bottom: none;
+    box-shadow: 1px 1px 5px rgb(157, 157, 157);
+    transform: scale(1);
+    transition: box-shadow .2s, transform .2s;
+}
+
+.cta-content a:hover,
+.cta-content a:active {
+    box-shadow: 2px 2px 10px rgb(157, 157, 157);
+    transform: scale(1.02);
+    transition: box-shadow .2s, transform .2s;
+}
+
 .links p {
-    font-size: 13px;
-    margin: 0 8px;
+    font-size: 16px;
+    margin: .5em 0;
+    font-weight: 200;
 }
 
 .links p,
 .links a {
-    color: gray;
-    border-bottom-color: gray;
+    color: white;
+    border-bottom-color: white;
 }
 
 /* 
