--- a/css/ids.css
+++ b/css/ids.css
@@ -362,9 +362,9 @@ nav ul div {
 /* 
     ARTICLE ALIGNMENT (flexbox added in larger view widths)
 */
-article {
-    padding-top: 72px;
-}
+/* article {
+    padding-top: 56px;
+} */
 
 section p:first-child {
     margin-top: 0;
@@ -483,7 +483,7 @@ figure {
 .imagegrid {
     max-width: var(--width-xl);
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(13, 1fr);
     grid-gap: 15px;
     padding-left: var(--sm);
     padding-right: var(--sm);
@@ -735,6 +735,7 @@ footer p.copyright {
     max-width: var(--large);
     margin: 0 auto;
     display: flex;
+    flex-flow: row wrap;
     padding: 30px 0;
     /* align-items: center; */
     /* justify-content: space-between; */
@@ -965,6 +966,7 @@ No media query for `xs` since this is the default */
         padding-bottom: 10px;
         padding-right: 25px;
         margin-left: -15%;
+        margin-right: 10px;
         margin-bottom: 0;
         margin-top: 0;
         float: left;
