--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ h4 {
   margin-bottom: 0.5em;
 }
 
+#methodology h4 {
+  margin: 1.0em 0 .5em;
+}
+
 h5 {
   /* graphic subhed */
   font-family: Inter, sans-serif;
@@ -87,6 +91,7 @@ h5 {
   grid-gap: 30px;
   margin: 0;
   padding: var(--md) var(--sm);
+  margin: 0 auto;
 }
 
 .imagegrid img {
@@ -123,6 +128,10 @@ h5 {
   to {
     opacity: 1;
   }
+}
+
+.topper div {
+  padding-top: var(--sm);
 }
 
 p.topper-caption {
@@ -193,7 +202,7 @@ p.drop-cap:first-letter {
 .definition-card {
   background-color: var(--lightgray);
   border-radius: 15px;
-  padding: var(--sm) var(--md);
+  padding: var(--sm) var(--md) var(--md);
   /* max-width: 80%; */
 }
 
