--- a/css/ids.css
+++ b/css/ids.css
@@ -63,6 +63,7 @@ html {
 
     /* colors */
     --idsred: #990000;
+    --darkred: #770000;
     --offblack: rgb(24, 24, 24);
     --gray05: rgb(242, 242, 242);
     --gray10: rgb(230, 230, 230);
@@ -710,7 +711,7 @@ footer {
 }
 
 footer .copyright {
-    background-color: #e8e8e8;
+    background-color: var(--darkred);
     margin: 0;
     padding: 7px 0 10px;
     color: rgb(135, 135, 135);
@@ -718,6 +719,7 @@ footer .copyright {
 }
 
 footer p.copyright {
+    color: var(--footer);
     padding: var(--xxs);
     padding-bottom: var(--xs);
     font-size: 18px;
@@ -736,7 +738,7 @@ footer p.copyright {
     margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
-    padding: 30px 0;
+    padding: 30px var(--sm);
     /* align-items: center; */
     /* justify-content: space-between; */
 }
@@ -805,6 +807,10 @@ footer .socials a {
     margin-left: 10px;
 }
 
+.footer-col.marketplace {
+    display: none;
+}
+
 .subscribe-cta {
     background-color: #DEEDF7;
     padding: 28px 0;
@@ -813,13 +819,15 @@ footer .socials a {
 .subscribe-cta h3 {
     margin-top: 0;
     margin-bottom: 0.2em;
-    font-size: 32px;
+    font-size: 18px;
+    line-height: 1.2em;
 }
 
 .subscribe-cta p {
     margin-bottom: 0;
     margin-top: 0;
     font-size: 20px;
+    display: none;
 }
 
 .subscribe-cta h3,
@@ -842,6 +850,7 @@ footer .socials a {
     display: flex;
     max-width: var(--large);
     margin: 0 auto;
+    padding: 0 var(--sm);
     justify-content: space-between;
     align-items: center;
 }
@@ -850,9 +859,10 @@ footer .socials a {
     /* subscribe button */
     font-weight: bold;
     letter-spacing: 0.05em;
-    height: 40px;
+    /* height: 40px; */
     font-size: 18px;
-    padding: 5px 15px;
+    text-align: center;
+    padding: 8px 15px;
     background-color: #990000;
     color: #f5f5f5;
     border-radius: 3px;
@@ -928,7 +938,19 @@ No media query for `xs` since this is the default */
 }
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {}
+@media (min-width: 640px) {
+    .footer-col.marketplace {
+        display: block;
+    }
+
+    .subscribe-cta h3 {
+        font-size: 24px;
+    }
+
+    .subscribe-cta p {
+        font-size: 22px;
+    }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
@@ -955,6 +977,14 @@ No media query for `xs` since this is the default */
 
     li.item a {
         margin-top: 0;
+    }
+
+    .subscribe-cta h3 {
+        font-size: 32px;
+    }
+
+    .subscribe-cta p {
+        display: block;
     }
 }
 
