--- a/css/ids.css
+++ b/css/ids.css
@@ -428,10 +428,11 @@ p.credit {
     text-transform: uppercase;
     font-size: .9em;
     text-align: right;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
     margin-top: 0;
     line-height: 1.2em;
-    padding-top: var(--xxs);
+    padding-top: 4px;
+    opacity: .8;
 }
 
 figure {
