--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h3 {
   font-family: 'Fira Sans', Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 700;
+  line-height: 1.3em;
 }
 
 h4 {
