--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,30 @@ p.word {
   font-weight: 800;
 }
 
+.definition-card>div {
+  display: flex;
+  align-items: center;
+}
+
+.definition-card i {
+  margin-right: 9px;
+  font-size: 120%;
+}
+
+/* .definition-card>div div {
+  background: var(--gray80);
+  padding: 4px 7px;
+  font-size: 90%;
+  color: var(--lightgray);
+  border-radius: 50%;
+} */
+
+p.word i {
+  background-color: red;
+  padding: .2em;
+  font-size: 80%;
+}
+
 p.definition {
   font-size: 16px;
   margin: 0.5em 0;
